feat(): Udpate styles for bs5

--- a/theme/layouts/_default/default.html
+++ b/theme/layouts/_default/default.html
@@ -5,6 +5,7 @@
     {{ partial "head/html.html" . }}
 </head>
 <body>
+<div class="app-toolbar" id="app-toolbar"></div>
 
 {{ partial "header/app-header" . }}
 
