--- a/theme/scss/components/_component.alerts.scss
+++ b/theme/scss/components/_component.alerts.scss
@@ -7,7 +7,7 @@
     border: 1px solid #eee;
     border-left-width: .25rem;
     @include when-inside('.app-main >') {
-        @include make-container-max-widths();
+        @include make-container();
     }
 }
 
