--- a/theme/scss/objects/_object.select.scss
+++ b/theme/scss/objects/_object.select.scss
@@ -23,7 +23,7 @@
 
     */
     &:not([multiple]) {
-        background: $custom-select-background;
+        background: $form-select-bg;
     }
     &[multiple],
     &[size]:not([size="1"]) {
