--- a/theme/scss/components/_component.banner.scss
+++ b/theme/scss/components/_component.banner.scss
@@ -6,7 +6,7 @@
 .c-banner--front-page {
     margin-top: 8.5rem;
     //margin-bottom: 4rem;
-    @include make-container-max-widths();
+    @include make-container();
 
 }
 
@@ -22,7 +22,7 @@
     @include mq($from: md) {
 		min-height: 600px;
 	}
-    
+
 }
 
 .c-banner__header {
@@ -43,7 +43,7 @@
 		padding: 0 6rem;
 		font-size: 2rem;
 	}
-	
+
 }
 
 .c-banner__description {
