--- a/theme/scss/components/_component.identifier.scss
+++ b/theme/scss/components/_component.identifier.scss
@@ -22,7 +22,7 @@
 }
 
 .c-identifier__content {
-    // @include make-container-max-widths();
+    // @include make-container();
     @include font-size($font-size-small);
     font-family: $app-font-family-strong;
     text-align: right;
