feat(): Update styles and layout

--- a/theme/layouts/_default/default.html
+++ b/theme/layouts/_default/default.html
@@ -13,7 +13,7 @@
     <aside class="app-sidebar" id="app-sidebar">
         <div class="o-aside" id="app-sidebar-content"></div>
     </aside>
-    <section class="app-content" id="app-content">
+    <section class="app-content o-page" id="app-content">
         <header class="o-page__header">
             <div class="c-page-header">
                 <div class="c-page-header__title">
@@ -31,5 +31,7 @@
 </main>
 
 {{ partial "footer/app-footer" . }}
+
+<script type="module" src="/scripts/app.js" defer></script>
 </body>
 </html>
