--- a/theme/scss/main.scss
+++ b/theme/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'tools/mixins.parentselector';
 @import 'tools/mixins.icon';
 @import 'tools/mixins.grid.base';
+@import 'tools/mixins.container';
 
 @import 'vendors/mq';
 @import 'vendors/rfs';
@@ -93,6 +94,7 @@
 @import 'objects/object.link';
 @import 'objects/object.read-more';
 @import 'objects/object.hero';
+@import 'objects/object.timestamp';
 
 // Components
 @import 'components/component.app-header';
