--- a/theme/scss/settings/_settings.elements.scss
+++ b/theme/scss/settings/_settings.elements.scss
@@ -9,7 +9,7 @@ $app-hr-border-color:                   rgba($app-color-text, .1);
 $app-hr-border-width:                   1px;
 
 // Headings
-$app-headings-margin-bottom:            .5rem;
+$app-headings-margin-bottom:            1.25rem;
 $app-headings-line-height:              1.2;
 $app-headings-font-family:              $app-font-family-light;
 $app-headings-font-family-secondary:    $app-font-family-light;
