--- a/theme/scss/wysiwyg.scss
+++ b/theme/scss/wysiwyg.scss
@@ -9,6 +9,7 @@
 @import 'tools/mixins.list-reset';
 @import 'tools/mixins.parentselector';
 @import 'tools/mixins.icon';
+@import 'tools/mixins.container';
 
 @import 'vendors/mq';
 // @import 'vendors/rfs';
