feat(): Refactor theme
IMplement black and white color scheme and cleanup templates

--- a/resources/theme/mhb.theme/styles/wysiwyg.css
+++ b/resources/theme/mhb.theme/styles/wysiwyg.css
@@ -260,7 +260,7 @@
 .c-call-out {
   background-color: #fff;
   padding: calc(1.5rem * 1.5 / 2);
-  border-left: 0.125rem solid #333;
+  border-left: 0.125rem solid #212529;
 }
 
 .c-feature {
@@ -268,7 +268,7 @@
   padding: calc(1.5rem * 1.5);
   border: 0 solid #5a5f64;
   border-width: 0.25rem 0;
-  color: #d3802a;
+  color: #212529;
   font-weight: bold;
   margin-top: calc(1.5rem * 1.5 * 1.25);
   margin-bottom: calc(1.5rem * 1.5 * 1.25);
@@ -687,8 +687,8 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #d3802a;
-  --bs-secondary: #74c4ea;
+  --bs-primary: #212529;
+  --bs-secondary: #5a5f64;
   --bs-danger: #74c4ea;
   --bs-font-sans-serif: "Montserrat", "Lucida Grande", Tahoma, Sans-Serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -889,7 +889,7 @@ sup {
 }
 
 a {
-  color: #d3802a;
+  color: #212529;
   text-decoration: underline;
 }
 
@@ -3917,85 +3917,85 @@ fieldset:disabled .btn {
 }
 
 .btn-primary {
-  color: #000;
-  background-color: #d3802a;
-  border-color: #d3802a;
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
 }
 
 .btn-primary:hover {
-  color: #000;
-  background-color: #da934a;
-  border-color: #d78d3f;
+  color: #fff;
+  background-color: #1c1f23;
+  border-color: #1a1e21;
 }
 
 .btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: #000;
-  background-color: #da934a;
-  border-color: #d78d3f;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
+  color: #fff;
+  background-color: #1c1f23;
+  border-color: #1a1e21;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
 }
 
 .btn-check:checked + .btn-primary,
 .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active,
 .show > .btn-primary.dropdown-toggle {
-  color: #000;
-  background-color: #dc9955;
-  border-color: #d78d3f;
+  color: #fff;
+  background-color: #1a1e21;
+  border-color: #191c1f;
 }
 
 .btn-check:checked + .btn-primary:focus,
 .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
 }
 
 .btn-primary:disabled, .btn-primary.disabled {
-  color: #000;
-  background-color: #d3802a;
-  border-color: #d3802a;
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
 }
 
 .btn-secondary {
-  color: #000;
-  background-color: #74c4ea;
-  border-color: #74c4ea;
+  color: #fff;
+  background-color: #5a5f64;
+  border-color: #5a5f64;
 }
 
 .btn-secondary:hover {
-  color: #000;
-  background-color: #89cded;
-  border-color: #82caec;
+  color: #fff;
+  background-color: #4d5155;
+  border-color: #484c50;
 }
 
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
-  color: #000;
-  background-color: #89cded;
-  border-color: #82caec;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(99, 167, 199, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(99, 167, 199, 0.5);
+  color: #fff;
+  background-color: #4d5155;
+  border-color: #484c50;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(115, 119, 123, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(115, 119, 123, 0.5);
 }
 
 .btn-check:checked + .btn-secondary,
 .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active,
 .show > .btn-secondary.dropdown-toggle {
-  color: #000;
-  background-color: #90d0ee;
-  border-color: #82caec;
+  color: #fff;
+  background-color: #484c50;
+  border-color: #44474b;
 }
 
 .btn-check:checked + .btn-secondary:focus,
 .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus,
 .show > .btn-secondary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(99, 167, 199, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(99, 167, 199, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(115, 119, 123, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(115, 119, 123, 0.5);
 }
 
 .btn-secondary:disabled, .btn-secondary.disabled {
-  color: #000;
-  background-color: #74c4ea;
-  border-color: #74c4ea;
+  color: #fff;
+  background-color: #5a5f64;
+  border-color: #5a5f64;
 }
 
 .btn-danger {
@@ -4040,70 +4040,70 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #d3802a;
-  border-color: #d3802a;
+  color: #212529;
+  border-color: #212529;
 }
 
 .btn-outline-primary:hover {
-  color: #000;
-  background-color: #d3802a;
-  border-color: #d3802a;
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
 }
 
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(211, 128, 42, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(211, 128, 42, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(33, 37, 41, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(33, 37, 41, 0.5);
 }
 
 .btn-check:checked + .btn-outline-primary,
 .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
-  color: #000;
-  background-color: #d3802a;
-  border-color: #d3802a;
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
 }
 
 .btn-check:checked + .btn-outline-primary:focus,
 .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(211, 128, 42, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(211, 128, 42, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(33, 37, 41, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(33, 37, 41, 0.5);
 }
 
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #d3802a;
+  color: #212529;
   background-color: transparent;
 }
 
 .btn-outline-secondary {
-  color: #74c4ea;
-  border-color: #74c4ea;
+  color: #5a5f64;
+  border-color: #5a5f64;
 }
 
 .btn-outline-secondary:hover {
-  color: #000;
-  background-color: #74c4ea;
-  border-color: #74c4ea;
+  color: #fff;
+  background-color: #5a5f64;
+  border-color: #5a5f64;
 }
 
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(116, 196, 234, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(116, 196, 234, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(90, 95, 100, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(90, 95, 100, 0.5);
 }
 
 .btn-check:checked + .btn-outline-secondary,
 .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
-  color: #000;
-  background-color: #74c4ea;
-  border-color: #74c4ea;
+  color: #fff;
+  background-color: #5a5f64;
+  border-color: #5a5f64;
 }
 
 .btn-check:checked + .btn-outline-secondary:focus,
 .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(116, 196, 234, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(116, 196, 234, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(90, 95, 100, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(90, 95, 100, 0.5);
 }
 
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #74c4ea;
+  color: #5a5f64;
   background-color: transparent;
 }
 
@@ -4365,7 +4365,7 @@ html {
   /* [2] */
   min-height: 100%;
   /* [3] */
-  color: #333;
+  color: #212529;
   width: 100%;
   font-family: "Lora";
   font-weight: 300;
@@ -4381,7 +4381,7 @@ html {
 }
 
 body {
-  color: #333;
+  color: #212529;
   background: #fff;
   font-size: calc(1.275rem + 0.3vw);
   font-weight: 500;
@@ -4423,7 +4423,7 @@ hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
-  border-top: 1px solid rgba(51, 51, 51, 0.1);
+  border-top: 1px solid rgba(33, 37, 41, 0.1);
 }
 
 b,
@@ -4439,6 +4439,7 @@ strong {
 i, em {
   font-family: "Lora";
   font-weight: 400;
+  color: #5a5f64;
 }
 
 .font__primary--loaded i, .font__primary--loaded em {
@@ -4457,22 +4458,22 @@ button {
 }
 
 a:not(class) {
-  color: #d3802a;
+  color: #212529;
 }
 
 a:not(class):hover {
-  color: #93591d;
+  color: black;
   -webkit-transition: color 0.5s linear;
   transition: color 0.5s linear;
 }
 
 .o-page__body-text a:not(class) {
   font-weight: 600;
-  color: #74c4ea;
+  color: #5a5f64;
 }
 
 .o-page__body-text a:not(class):hover {
-  color: #53b6e5;
+  color: #484c50;
 }
 
 img {
@@ -4535,7 +4536,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6,
   font-family: "Montserrat";
   font-weight: 300;
   line-height: 1.2;
-  color: #d3802a;
+  color: #212529;
   text-transform: uppercase;
 }
 
@@ -4608,7 +4609,7 @@ table,
 .o-table {
   width: 100%;
   margin-bottom: calc(1.5rem * 1.5);
-  color: #333;
+  color: #212529;
   background-color: transparent;
 }
 
@@ -4658,7 +4659,7 @@ table tbody + tbody,
 }
 
 .o-table__row--actions {
-  border-top: 0.25rem solid #333;
+  border-top: 0.25rem solid #212529;
   padding-top: calc(1.5rem * 1.5);
 }
 
@@ -4681,16 +4682,40 @@ blockquote {
 .o-page {
   display: block;
   position: relative;
-  padding-right: calc(1.5rem * 1.5);
-  padding-left: calc(1.5rem * 1.5);
-  padding-top: calc(1.5rem * 1.5 * 1.25);
+  padding-right: .25rem;
+  padding-left: .25rem;
   width: 100%;
 }
 
 @media (min-width: 62em) {
   .o-page {
-    padding-right: 0;
-    padding-left: 0;
+    padding-top: calc(1.5rem * 1.5 * 1.25);
+    padding-right: calc(1.5rem * 1.5);
+    padding-left: calc(1.5rem * 1.5);
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media (min-width: 62em) and (min-width: 62em) {
+  .o-page {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media (min-width: 62em) and (min-width: 62em) and (min-width: 992px) {
+  .o-page {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 62em) and (min-width: 62em) and (min-width: 1200px) {
+  .o-page {
+    max-width: 1140px;
   }
 }
 
@@ -5657,7 +5682,7 @@ body:not(.portaltype-ade25-panelpage-page) .o-page:not(.o-page--panels) {
 }
 
 .o-icon--primary {
-  color: #d3802a;
+  color: #212529;
 }
 
 .o-icon--circle {
@@ -5670,7 +5695,7 @@ body:not(.portaltype-ade25-panelpage-page) .o-page:not(.o-page--panels) {
 }
 
 .o-icon--nav-toggle {
-  fill: #d3802a;
+  fill: #212529;
   width: 4rem;
   height: 4rem;
 }
@@ -5754,11 +5779,11 @@ body:not(.portaltype-ade25-panelpage-page) .o-page:not(.o-page--panels) {
 }
 
 .o-link {
-  color: #74c4ea;
+  color: #5a5f64;
 }
 
 .o-link:hover {
-  color: #53b6e5;
+  color: #484c50;
   -webkit-transition: color 0.5s linear;
   transition: color 0.5s linear;
 }
@@ -6449,7 +6474,7 @@ a.c-button--active-action {
 }
 
 .searchPage .c-button--default:hover {
-  color: #d3802a;
+  color: #212529;
   background-color: #fff;
   border-color: #fff;
 }
@@ -6479,7 +6504,7 @@ a.c-button--active-action {
 
 .searchPage .c-button--default:hover {
   color: #fff;
-  background: #db9349;
+  background: #32383e;
 }
 
 .c-button--danger {
@@ -6517,84 +6542,84 @@ a.c-button--active-action {
 }
 
 .c-button--primary {
-  color: #000;
-  background-color: #d3802a;
-  border-color: #d3802a;
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
 }
 
 .c-button--primary:hover {
-  color: #000;
-  background-color: #da934a;
-  border-color: #d78d3f;
+  color: #fff;
+  background-color: #1c1f23;
+  border-color: #1a1e21;
 }
 
 .btn-check:focus + .c-button--primary, .c-button--primary:focus {
-  color: #000;
-  background-color: #da934a;
-  border-color: #d78d3f;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
+  color: #fff;
+  background-color: #1c1f23;
+  border-color: #1a1e21;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
 }
 
 .btn-check:checked + .c-button--primary,
 .btn-check:active + .c-button--primary, .c-button--primary:active, .c-button--primary.active,
 .show > .c-button--primary.dropdown-toggle {
-  color: #000;
-  background-color: #dc9955;
-  border-color: #d78d3f;
+  color: #fff;
+  background-color: #1a1e21;
+  border-color: #191c1f;
 }
 
 .btn-check:checked + .c-button--primary:focus,
 .btn-check:active + .c-button--primary:focus, .c-button--primary:active:focus, .c-button--primary.active:focus,
 .show > .c-button--primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(179, 109, 36, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(66, 70, 73, 0.5);
 }
 
 .c-button--primary:disabled, .c-button--primary.disabled {
-  color: #000;
-  background-color: #d3802a;
-  border-color: #d3802a;
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
 }
 
 .c-button--secondary {
-  color: #000;
-  background-color: #74c4ea;
+  color: #fff;
+  background-color: #5a5f64;
   border-color: #fff;
 }
 
 .c-button--secondary:hover {
-  color: #000;
-  background-color: #89cded;
-  border-color: white;
+  color: #fff;
+  background-color: #4d5155;
+  border-color: #cccccc;
 }
 
 .btn-check:focus + .c-button--secondary, .c-button--secondary:focus {
-  color: #000;
-  background-color: #89cded;
-  border-color: white;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(217, 217, 217, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(217, 217, 217, 0.5);
+  color: #fff;
+  background-color: #4d5155;
+  border-color: #cccccc;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
 }
 
 .btn-check:checked + .c-button--secondary,
 .btn-check:active + .c-button--secondary, .c-button--secondary:active, .c-button--secondary.active,
 .show > .c-button--secondary.dropdown-toggle {
-  color: #000;
-  background-color: #90d0ee;
-  border-color: white;
+  color: #fff;
+  background-color: #484c50;
+  border-color: #bfbfbf;
 }
 
 .btn-check:checked + .c-button--secondary:focus,
 .btn-check:active + .c-button--secondary:focus, .c-button--secondary:active:focus, .c-button--secondary.active:focus,
 .show > .c-button--secondary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(217, 217, 217, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(217, 217, 217, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
 }
 
 .c-button--secondary:disabled, .c-button--secondary.disabled {
-  color: #000;
-  background-color: #74c4ea;
+  color: #fff;
+  background-color: #5a5f64;
   border-color: #fff;
 }
 
@@ -6739,13 +6764,13 @@ a.c-button--active-action {
 }
 
 .c-alert--primary {
-  color: #333;
+  color: #212529;
   background-color: #fff;
   border-color: #5a5f64;
 }
 
 .c-alert--primary .alert-link {
-  color: #292929;
+  color: #1a1e21;
 }
 
 .c-alert--toast {
@@ -6810,7 +6835,7 @@ a.c-button--active-action {
   left: calc(50% - 2rem);
   width: 4rem;
   height: 4rem;
-  background-color: #d3802a;
+  background-color: #212529;
 }
 
 .o-icon--testimonial {
