--- a/theme/layouts/partials/header/app-header.html
+++ b/theme/layouts/partials/header/app-header.html
@@ -1,7 +1,7 @@
 <header class="app-header" id="app-header" role="banner">
     <div class="app-header__content">
         <section class="app-header__section app-header__section--brand">
-            {{ partial "header/app-brand" . }}
+            {{ partial "header/app-brand-inverse" . }}
         </section>
         <section class="app-header__section app-header__section--navigation">
             {{ partial "objects/burger.html" . }}
