--- a/theme/scss/components/_component.listing.scss
+++ b/theme/scss/components/_component.listing.scss
@@ -1,4 +1,4 @@
-$c-list-spacer:                             $app-spacer-base;
+$c-list-spacer:                             $app-spacer-lg;
 $c-list-margin-x:                           $c-list-spacer;
 $c-list-border-color:                       $app-color-text;
 $c-list-border-width:                       1px;
