--- a/theme/scss/components/_component.nav-bar.scss
+++ b/theme/scss/components/_component.nav-bar.scss
@@ -87,3 +87,11 @@ $c-nav-bar-background:                  $app-color-primary;
         fill: $c-nav-bar-background;
     }
 }
+
+.c-nav-bar__main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
