--- a/theme/layouts/partials/footer/app-footer.html
+++ b/theme/layouts/partials/footer/app-footer.html
@@ -1,24 +1,13 @@
 <footer class="app-footer" id="app-footer" role="contentinfo">
     <div class="app-footer__content">
         <div class="app-footer__main">
-            <div class="app-footer__title">
-                <a class="app-footer__link--inverse" href="/impressum">
-                    kontakt me<span class="app-color--primary">etshaus:</span>
-                </a>
+            <div class="app-footer__links">
+                <a class="app-footer__link" href="/impressum">Impressum</a> |
+                <a class="app-footer__link" href="/datenschutz">Datenschutz</a>
             </div>
-            <p>
-                <a class="app-footer__link--inverse" href="/impressum">
-                    lisafigas@meetshaus.de
-                </a>
-            </p>
-        </div>
-        <div class="app-footer__aside">
-            <a class="app-footer__link" href="/impressum">Impressum</a> |
-            <a class="app-footer__link" href="/datenschutz">Datenschutz</a>
-            <br />
-            Copyright @copy; {{ now.Format "2006" }} Meetshaus. All rights reserved.
-
+            <div class="app-footer__copyright">
+                Copyright &copy; {{ now.Format "2006" }} Meetshaus. All rights reserved.
+            </div>
         </div>
     </div>
-    {{ partial "components/identifier.html" . }}
 </footer>
