--- a/theme/scss/components/_component.app-footer.scss
+++ b/theme/scss/components/_component.app-footer.scss
@@ -1,7 +1,7 @@
 // Footer
 $app-footer-padding-top:                        0;
 $app-footer-padding-right:                      0;
-$app-footer-padding-bottom:                     calc(#{$app-spacer-base} * 5);
+$app-footer-padding-bottom:                     $app-spacer-base;
 $app-footer-padding-bottom-lg:                  calc(#{$app-spacer-base} * 2.5);
 $app-footer-padding-left:                       0;
 
@@ -14,6 +14,7 @@ $app-footer-content-padding-bottom:             0;
 $app-footer-content-padding-left:               0;
 
 .app-footer {
+    width: 100%;
     padding: $app-footer-padding-top $app-footer-padding-right $app-footer-padding-bottom $app-footer-padding-top;
 }
 
@@ -29,9 +30,8 @@ $app-footer-content-padding-left:               0;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    @include mq($from: lg) {
-        padding: 0;
-    }
+    text-align: right;
+    @include padding-right($app-spacer-base);
     &--primary {
         color: $app-color-white;
         background-color: $app-color-primary;
@@ -47,4 +47,8 @@ $app-footer-content-padding-left:               0;
     @include mq($from: lg) {
         padding: 0;
     }
+}
+
+.app-footer__copyright {
+    @include font-size($app-font-size-sm);
 }
