--- a/theme/scss/components/_component.snippet.scss
+++ b/theme/scss/components/_component.snippet.scss
@@ -3,12 +3,12 @@ $c-snippet-aside-width:             25%;
 $c-snippet-main-width:              75%;
 $c-snippet-flex-direction:          row;
 $c-snippet-width:                   100%;
-$c-snippet-padding:                 $app-font-size-base;
+$c-snippet-padding:                 $app-spacer-base;
 $c-snippet-padding-sm:              calc(#{$app-font-size-base} / 2);
 //$c-snippet-margin-base:             calc(#{$app-font-size-base} * 1.5);
 $c-snippet-margin-base:             $app-font-size-base;
 
-$c-snippet-color:                   $app-color-text;
+$c-snippet-color:                   $app-color-secondary;
 
 
 .c-snippet {
@@ -28,8 +28,8 @@ $c-snippet-color:                   $app-color-text;
     @include mq($from: md) {
         flex: 1 0 $c-snippet-aside-width;
         max-width: $c-snippet-aside-width;
-        padding-right: $c-snippet-padding;
-        padding-bottom: 0;
+        padding-left: $c-snippet-padding;
+        padding-top: 2.75rem;
     }
 }
 
@@ -55,10 +55,16 @@ $c-snippet-color:                   $app-color-text;
     padding-top: $c-snippet-padding-sm;
 }
 
+.c-snippet__kicker {
+    @include font-size($app-font-size-sm);
+    font-family: $app-font-family-strong;
+    padding-left: 0.125rem;
+    @include padding-bottom($c-snippet-padding-sm);
+}
 
 // Snippet elements
 .c-snippet__title {
-    font-weight: 500;
+    font-weight: 300;
 }
 
 .c-snippet__section {
